# deploy-airflow-on-kube

./: .dockerignore  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.sh
kube/airflow-chart/: values.yaml
src/airflow/dags/: test_dag.py
src/kube/airflow-chart/: values.yaml
