[tool.poetry]
name = "deploy-airflow-on-kube"
version = "0.1.0"
description = ""
authors = ["surawut.jirasaktavee <surawut.jirasaktavee@gmail.com>"]
readme = "README.md"
packages = [{include = "deploy_airflow_on_kube"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
